# fastapi

./: .env-non-dev  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/database/: DBmodel.py  db.py
app/models/: track.py  tracker.py  users.py
app/routers/: auth.py  registrate.py  something.py  track.py
app/schemas/: track.py  user.py
app/services/: auth.py  jwt.py  registrate.py  security.py  track.py
migrations/: env.py
migrations/versions/: 2023_11_16_1306-318a47be5b43_.py  2023_11_17_1429-3c285ea08897_.py  2023_11_22_1332-6ce4e7cbfcfd_2.py  2023_11_27_2234-bfeec00e1c76_3.py  2023_12_08_0153-de63b0bd8232_add_mail.py
tests/: conftest.py  test_auth.py  test_tracks.py
